Added: Header has been added in address book form

--- a/Pages/AddressBook.html
+++ b/Pages/AddressBook.html
@@ -18,5 +18,13 @@
             </div>
         </div>
     </header>
+    <div class="table-main">
+        <table id="display" class="table">
+            <tr>
+                <th>PERSON ADDRES FORM</th>
+                <th class="header-logo"><img onclick="cancel(this)" src="../Assets/icons/cancel-logo.PNG" alt="cancel"></th>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
