--- a/Pages/AddressBook.html
+++ b/Pages/AddressBook.html
@@ -22,7 +22,63 @@
         <table id="display" class="table">
             <tr>
                 <th>PERSON ADDRES FORM</th>
-                <th class="header-logo"><img onclick="cancel(this)" src="../Assets/icons/cancel-logo.PNG" alt="cancel"></th>
+                <th class="header-logo"><img id="1" onclick="cancel(this)" 
+                    src="../Assets/icons/cancel-logo.PNG" alt="cancel"></th>
+            </tr>
+            <tr>
+                <td><label class="label-text" for="fullName">Full Name</label><br>
+                <input class="input1" type="text" id="fullName" name="fullName"></td>
+            </tr>
+            <tr>
+                <td><label class="label-text" for="phoneNumber">Phone Number</label><br>
+                <input class="input1" type="text" id="phoneNumber" name="phoneNumber"></td>
+            </tr>
+            <tr>
+                <td><label class="label-text" for="address">Address</label><br>
+                <input class="input2" type="text" id="address" name="address"></td>
+            </tr>
+            <tr>
+                <td>
+                    <select id="city" name="City">
+                        <option value="select-city">Select-City</option>
+                        <option value="city1">City1</option>
+                        <option value="city2">City2</option>
+                        <option value="city3">City3</option>
+                        <option value="city4">City4</option>
+                        <option value="city5">City5</option>
+                        <option value="city6">City6</option>
+                        <option value="city7">City7</option>
+                        <option value="city8">City8</option>
+                        <option value="city9">City9</option>
+                        <option value="city10">City10</option>
+                        <option value="city11">City11</option>
+                        <option value="city12">City12</option>
+                        <option value="city13">City13</option>
+                        <option value="city14">City14</option>
+                        <option value="city15">City15</option>
+                        <option value="city16">City16</option>
+                        <option value="city17">City17</option>
+                        <option value="city18">City18</option>
+                        <option value="city19">City19</option>
+                    </select>
+                    <select id="state" name="State">
+                        <option value="select-state">Select-State</option>
+                        <option value="state1">state1</option>
+                        <option value="state2">state2</option>
+                        <option value="state3">state3</option>
+                        <option value="state4">state4</option>
+                        <option value="state5">state5</option>
+                        <option value="state6">state6</option>
+                        <option value="state7">state7</option>
+                    </select>
+                    <input class="input4" type="text" id="zipCode" name="zipCode" placeholder="Zip Code">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit" class="button submitButton" id="submitButton">Add</button>
+                    <button type="reset" class="button resetButton">Reset</button>
+                </td>
             </tr>
         </table>
     </div>
