Modified: Save data on clicking Add button

--- a/Pages/AddressBook.html
+++ b/Pages/AddressBook.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </header>
-    <form>
+    <form class="form" action="#" onreset="resetForm()" onsubmit="save()";return false>
         <header class="headerContainer">
             <div class="form-head">PERSON ADDRES FORM</div>
             
