Added: Data added to the local storage

--- a/Pages/AddressBook.html
+++ b/Pages/AddressBook.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Address Book Form</title>
     <link rel="stylesheet" href="../Styles/AddressBook.css">
-    <script defer href="../Script/AddressBook.js"></script>
-</head>
+    </head>
+
 <body>
     <header class="header-content header">
         <div class="logo-content">
@@ -80,6 +80,8 @@
             </div>
         </div>
     </form>
-    
+    <script src="../Script/AddressBook.js"></script>
+    <script src="../Script/AddressBookData.js"></script>
+
 </body>
 </html>
