--- a/Pages/AddressBook.html
+++ b/Pages/AddressBook.html
@@ -73,7 +73,7 @@
             <input class="input2" type="text" id="zipCode" name="zipCode" placeholder="Zip Code">
         </div>
         <div class="buttonParent">
-            <a href="home.html" class="resetButton button cancelButton">Cancel</a>
+            <a href="Home.html" class="resetButton button cancelButton">Cancel</a>
             <div class="Add-reset">
                 <button type="submit" class="button addButton" id="addButton">Add</button>
                 <button type="reset" class="button resetButton">Reset</button>
