--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="../Styles/Home.css">
 </head>
 <body>
-    
+    <header class="header-content header">
+        <div class="logo-content">
+            <img src="../Assets/images/logo.png" alt="logo">
+            <div>
+                <span class="book-text">ADDRESS</span><br>
+                <span class="book-text address-book">BOOK</span>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
