Added: Header content has been added in home pages

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -17,5 +17,12 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content">
+            <div class="address-book-text">Person Details</div>
+            <a href="AddressBook.html" class="add-button">
+                <img src="../Assets/icons/add-24px.svg" alt="">Add Person</a>
+        </div>
+    </div>
 </body>
 </html>
