Added: Table Header added in home pages

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -23,6 +23,18 @@
             <a href="AddressBook.html" class="add-button">
                 <img src="../Assets/icons/add-24px.svg" alt="">Add Person</a>
         </div>
+        <div class="table-main">
+            <table id="display" class="table">
+                <tr>
+                    <th>Full Name</th>
+                    <th>Phone Number</th>
+                    <th>Address</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Zip Code</th>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
