Read: Read data from local storage in home pages

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -25,16 +25,10 @@
         </div>
         <div class="table-main">
             <table id="display" class="table">
-                <tr>
-                    <th>Full Name</th>
-                    <th>Phone Number</th>
-                    <th>Address</th>
-                    <th>City</th>
-                    <th>State</th>
-                    <th>Zip Code</th>
-                </tr>
+                
             </table>
         </div>
     </div>
+    <script src="../Script/Home.js"></script>
 </body>
 </html>
