Update: Updation of data functionality has been added

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -25,10 +25,10 @@
         </div>
         <div class="table-main">
             <table id="display" class="table">
-                
             </table>
         </div>
     </div>
     <script src="../Script/Home.js"></script>
+    <script src="../Script/siteProperties.js"></script>
 </body>
 </html>
